--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.19.5",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
     "react-datepicker": "^4.7.0",
