--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/charts": "^1.3.6",
+    "@react-pdf-viewer/default-layout": "^3.3.2",
     "@react-pdf/renderer": "^2.1.1",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.2",
@@ -13,6 +14,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "moment": "^2.29.3",
+    "pdfjs-dist": "^2.14.305",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
     "react-datepicker": "^4.7.0",
@@ -56,5 +58,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
