--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "antd": "^4.19.5",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.3",
     "pdfjs-dist": "^2.12.313",
     "react": "^17.0.2",
